[gd_scene load_steps=3 format=3 uid="uid://cb1ohuye5gdqu"]

[ext_resource type="Script" uid="uid://2mtbuhxutvhm" path="res://Cenas/hud/hud.gd" id="1_37p78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vidas" type="HBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 52.0
offset_bottom = 36.0
theme_override_constants/separation = 4

[node name="Vida1" type="ColorRect" parent="UI/Vidas"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="Vida2" type="ColorRect" parent="UI/Vidas"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="Vida3" type="ColorRect" parent="UI/Vidas"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="BossHPBar" type="ProgressBar" parent="UI"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(700, 30)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -358.0
offset_top = 15.0
offset_right = 342.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_37p78")
max_value = 200.0
value = 200.0
